--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/node": "20.12.12",
     "eslint": "9.x",
     "globals": "15.3.0",
+    "prisma": "5.14.0",
     "tsup": "8.0.2",
     "tsx": "4.11.0",
     "typescript": "5.4.5",
     "typescript-eslint": "7.11.0"
   },
   "dependencies": {
+    "@prisma/client": "5.14.0",
     "dotenv": "16.4.5",
     "fastify": "4.27.0",
     "zod": "3.23.8"
