--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@eslint/js": "9.3.0",
     "@rocketseat/eslint-config": "2.2.2",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "20.12.12",
     "eslint": "9.x",
     "globals": "15.3.0",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.14.0",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.4.5",
     "fastify": "4.27.0",
     "zod": "3.23.8"
