--- a/package.json
+++ b/package.json
@@ -7,20 +7,28 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui"
   },
   "devDependencies": {
     "@eslint/js": "9.3.0",
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.12.12",
+    "@vitest/coverage-v8": "1.6.0",
+    "@vitest/ui": "1.6.0",
     "eslint": "9.x",
     "globals": "15.3.0",
     "prisma": "5.14.0",
     "tsup": "8.0.2",
     "tsx": "4.11.0",
     "typescript": "5.4.5",
-    "typescript-eslint": "7.11.0"
+    "typescript-eslint": "7.11.0",
+    "vite-tsconfig-paths": "4.3.2",
+    "vitest": "1.6.0"
   },
   "dependencies": {
     "@prisma/client": "5.14.0",
