--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@types/node": "20.12.12",
     "@vitest/coverage-v8": "1.6.0",
     "@vitest/ui": "1.6.0",
-    "eslint": "9.x",
     "globals": "15.3.0",
     "prisma": "5.14.0",
     "tsup": "8.0.2",
@@ -31,6 +30,7 @@
     "vitest": "1.6.0"
   },
   "dependencies": {
+    "@fastify/jwt": "8.0.1",
     "@prisma/client": "5.14.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.11",
