--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
+    "test:create-prisma-environment": "npm link ./prisma/prisma-environment",
+    "test:install-prisma-environment": "npm link prisma-environment",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
     "test:coverage": "vitest --coverage",
     "test:ui": "vitest --ui"
   },
@@ -36,6 +40,7 @@
     "dayjs": "1.11.11",
     "dotenv": "16.4.5",
     "fastify": "4.27.0",
+    "npm-run-all": "4.1.5",
     "zod": "3.23.8"
   }
 }
