--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -29,4 +29,4 @@ jobs:
           JWT_SECRET: testing
           DATABASE_URL: "postgresql://docker:docker@localhost:5432/apisolid?schema=public"
       
-      - run: npm run teste:e2e
+      - run: npm run test:e2e
